--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -29,7 +29,7 @@ alert = #bd2c40
 
 [bar/skydome]
 dpi      = 140
-monitor = ${env:MONITOR:eDP1}
+monitor = ${env:MONITOR:DP-2}
 width = 100%
 height = 27
 ;offset-x = 1%
@@ -76,7 +76,7 @@ exec = pomo status
 
 [module/system-cpu-temppercore]
 type = custom/script
-exec = ~/polybar-scripts/system-cpu-temppercore.sh
+exec = ~/.config/polybar/system-cpu-temppercore.sh
 interval = 60
 
 [module/xwindow]
@@ -149,7 +149,7 @@ label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
-interface = wlp2s0
+interface = wlp3s0
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
