--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -57,17 +57,30 @@ font-0 = Roboto:pixelsize=10;1
 font-1 = Roboto:size=10:weight=bold;2
 font-2 = siji:pixelsize=8;1
 
-modules-left= alsa
-modules-center = date
-modules-right = wlan filesystem xkeyboard memory cpu battery system-cpu-temppercore powermenu
-; modules-right = wlan filesystem xbacklight alsa xkeyboard memory cpu battery system-cpu-temppercore powermenu
-
-tray-position = right
-tray-padding = 9
-;tray-background = #0063ff
+tray-position = left
+tray-padding = 30
+tray-background = #0063ff
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+
+modules-left= alsa 
+modules-center = date
+modules-right = workspaces-xmonad wlan filesystem xkeyboard memory cpu battery system-cpu-temppercore powermenu
+; modules-right = wlan filesystem xbacklight alsa xkeyboard memory cpu battery system-cpu-temppercore powermenu
+
+[module/workspaces-xmonad]
+type = custom/script
+exec = tail -F /tmp/.xmonad-workspace-log
+exec-if = [ -p /tmp/.xmonad-workspace-log ]
+tail = true
+
+[module/title-xmonad]
+type = custom/script
+exec = tail -F /tmp/.xmonad-title-log
+exec-if = [ -p /tmp/.xmonad-title-log ]
+tail = true
 
 [module/pomo]
 type = custom/script
@@ -87,7 +100,7 @@ label = %title:0:30:...%
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = " "
+format-prefix = ">"
 format-prefix-foreground = ${colors.foreground-alt}
 format-prefix-underline = ${colors.secondary}
 
@@ -134,7 +147,7 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = ">"
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #f90000
 label = %percentage:2%%
@@ -142,7 +155,7 @@ label = %percentage:2%%
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
+format-prefix = ">"
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #4bffdc
 label = %percentage_used%%
@@ -162,11 +175,11 @@ format-disconnected-underline = ${self.format-connected-underline}
 label-disconnected = %ifname% disconnected
 ;label-disconnected-foreground = ${colors.foreground-alt}
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
+ramp-signal-0 = >
+ramp-signal-1 = >
+ramp-signal-2 = >
+ramp-signal-3 = >
+ramp-signal-4 = >
 ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
@@ -175,7 +188,7 @@ interface =
 interval = 3.0
 
 format-connected-underline = #55aa55
-format-connected-prefix = " "
+format-connected-prefix = ">"
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
@@ -187,15 +200,15 @@ format-disconnected =
 
 [module/date]
 type = internal/date
-interval = 5
+interval = 1
 
-date =
+date = " %Y-%m-%d"
 date-alt = " %Y-%m-%d"
 
-time = %H:%M
+time = %H:%M:%S
 time-alt = %H:%M:%S
 
-format-prefix = 
+format-prefix =
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
 
@@ -208,7 +221,7 @@ format-volume = <label-volume> <bar-volume>
 label-volume = VOL %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = 🔇 muted
+label-muted = > muted
 label-muted-foreground = #666
 
 bar-volume-width = 10
@@ -235,7 +248,7 @@ format-volume = <label-volume> <bar-volume>
 label-volume = VOL
 label-volume-foreground = ${root.foreground}
 
-format-muted-prefix = " "
+format-muted-prefix = ">"
 format-muted-foreground = ${colors.foreground-alt}
 label-muted = sound muted
 
@@ -268,24 +281,24 @@ format-charging-underline = #ffb52a
 format-discharging = <animation-discharging> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = " "
+format-full-prefix = "#"
 format-full-prefix-foreground = ${colors.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
+ramp-capacity-0 = >
+ramp-capacity-1 = >>
+ramp-capacity-2 = >>>
 ramp-capacity-foreground = ${colors.foreground-alt}
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
+animation-charging-0 = >
+animation-charging-1 = >>
+animation-charging-2 = >>>
 animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
 
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
+animation-discharging-0 = %
+animation-discharging-1 = ?
+animation-discharging-2 = -
 animation-discharging-foreground = ${colors.foreground-alt}
 animation-discharging-framerate = 750
 
@@ -303,9 +316,9 @@ label = %temperature-c%
 label-warn = %temperature-c%
 label-warn-foreground = ${colors.secondary}
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
+ramp-0 = >
+ramp-1 = >
+ramp-2 = >
 ramp-foreground = ${colors.foreground-alt}
 
 [module/powermenu]
@@ -315,9 +328,9 @@ expand-right = true
 
 format-spacing = 1
 
-label-open = 
+label-open = >
 label-open-foreground = ${colors.secondary}
-label-close =  cancel
+label-close = > cancel
 label-close-foreground = ${colors.secondary}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
@@ -348,5 +361,4 @@ pseudo-transparency = true
 [global/wm]
 margin-top = 0
 margin-bottom = 0
-
 ; vim:ft=dosini
