--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -57,9 +57,12 @@ font-0 = Roboto:pixelsize=10;1
 font-1 = Roboto:size=10:weight=bold;2
 font-2 = siji:pixelsize=8;1
 
-tray-position = left
-tray-padding = 30
-tray-background = #0063ff
+tray-position = right
+tray-padding = 1
+tray-maxsize = 16
+tray-scale = 1.0
+tray-detached = false
+;tray-background = #0063ff
 
 cursor-click = pointer
 cursor-scroll = ns-resize
