--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -53,9 +53,13 @@ padding-right = 0
 module-margin-left = 2
 module-margin-right = 2
 
-font-0 = Roboto:pixelsize=10;1
-font-1 = Roboto:size=10:weight=bold;2
-font-2 = siji:pixelsize=8;1
+;font-0 = Roboto:pixelsize=10;1
+;font-1 = Roboto:size=10:weight=bold;2
+;font-2 = siji:pixelsize=8;1
+
+font-0 = "Tamsyn:pixelsize=10;1"
+font-1 = "Roboto:size=10:weight=bold;2"
+font-2 = "Noto Sans:size=8;1"
 
 tray-position = right
 tray-padding = 1
