--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -154,7 +154,7 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = ">"
+format-prefix = ""
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #f90000
 label = %percentage:2%%
@@ -182,11 +182,11 @@ format-disconnected-underline = ${self.format-connected-underline}
 label-disconnected = %ifname% disconnected
 ;label-disconnected-foreground = ${colors.foreground-alt}
 
-ramp-signal-0 = >
-ramp-signal-1 = >
-ramp-signal-2 = >
-ramp-signal-3 = >
-ramp-signal-4 = >
+ramp-signal-0 = λ
+ramp-signal-1 = λλ
+ramp-signal-2 = λλλ
+ramp-signal-3 = λλλλ
+ramp-signal-4 = λλλλλ
 ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
@@ -215,7 +215,7 @@ date-alt = " %Y-%m-%d"
 time = %H:%M:%S
 time-alt = %H:%M:%S
 
-format-prefix =
+format-prefix = "♈"
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
 
@@ -297,9 +297,9 @@ ramp-capacity-1 = >>
 ramp-capacity-2 = >>>
 ramp-capacity-foreground = ${colors.foreground-alt}
 
-animation-charging-0 = >
-animation-charging-1 = >>
-animation-charging-2 = >>>
+animation-charging-0 = ⚡
+animation-charging-1 = ⚡⚡
+animation-charging-2 = ⚡⚡⚡
 animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
 
@@ -332,7 +332,7 @@ ramp-foreground = ${colors.foreground-alt}
 interval = 30
 type = custom/script
 exec = ~/.config/polybar/task_polybar.sh
-format = [ <label>]
+format = ☐ <label>
 format-foreground = #FFF
 click-left = task "$((`cat /tmp/tw_polybar_id`))" done
 
@@ -343,9 +343,9 @@ expand-right = true
 
 format-spacing = 1
 
-label-open = >
+label-open = ⚙
 label-open-foreground = ${colors.secondary}
-label-close = > cancel
+label-close = ⚙ cancel
 label-close-foreground = ${colors.secondary}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
