--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -72,9 +72,9 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 
-modules-left= alsa 
-modules-center = date
-modules-right = taskwarrior wlan filesystem xkeyboard memory cpu battery system-cpu-temppercore powermenu
+modules-left= xwindow
+modules-center = date 
+modules-right = taskwarrior alsa wlan filesystem xkeyboard memory cpu battery system-cpu-temppercore powermenu
 ; modules-right = wlan filesystem xbacklight alsa xkeyboard memory cpu battery system-cpu-temppercore powermenu
 
 [module/workspaces-xmonad]
@@ -89,11 +89,6 @@ exec = tail -F /tmp/.xmonad-title-log
 exec-if = [ -p /tmp/.xmonad-title-log ]
 tail = true
 
-[module/pomo]
-type = custom/script
-interval = 1
-exec = pomo status
-
 [module/system-cpu-temppercore]
 type = custom/script
 exec = ~/.config/polybar/system-cpu-temppercore.sh
@@ -101,13 +96,13 @@ interval = 60
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
+label = ☢ %title:0:30:...%
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = ">"
+format-prefix = "⟇"
 format-prefix-foreground = ${colors.foreground-alt}
 format-prefix-underline = ${colors.secondary}
 
@@ -154,7 +149,7 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = ""
+format-prefix = "≬"
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #f90000
 label = %percentage:2%%
@@ -162,7 +157,7 @@ label = %percentage:2%%
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = ">"
+format-prefix = "⊛"
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #4bffdc
 label = %percentage_used%%
@@ -252,14 +247,14 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 type = internal/alsa
 
 format-volume = <label-volume> <bar-volume>
-label-volume = VOL
+label-volume = "♪"
 label-volume-foreground = ${root.foreground}
 
-format-muted-prefix = ">"
+format-muted-prefix = "⚠"
 format-muted-foreground = ${colors.foreground-alt}
 label-muted = sound muted
 
-bar-volume-width = 10
+bar-volume-width = 5
 bar-volume-foreground-0 = #55aa55
 bar-volume-foreground-1 = #55aa55
 bar-volume-foreground-2 = #55aa55
@@ -288,7 +283,7 @@ format-charging-underline = #ffb52a
 format-discharging = <animation-discharging> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = "#"
+format-full-prefix = "⊕"
 format-full-prefix-foreground = ${colors.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
 
@@ -303,9 +298,9 @@ animation-charging-2 = ⚡⚡⚡
 animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
 
-animation-discharging-0 = %
-animation-discharging-1 = ?
-animation-discharging-2 = -
+animation-discharging-0 = ⊖
+animation-discharging-1 = ∘
+animation-discharging-2 = ⊘
 animation-discharging-foreground = ${colors.foreground-alt}
 animation-discharging-framerate = 750
 
@@ -332,7 +327,7 @@ ramp-foreground = ${colors.foreground-alt}
 interval = 30
 type = custom/script
 exec = ~/.config/polybar/task_polybar.sh
-format = ☐ <label>
+format = ⊡ <label>
 format-foreground = #FFF
 click-left = task "$((`cat /tmp/tw_polybar_id`))" done
 
