--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -169,7 +169,7 @@ interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
 format-connected-underline = #9f78e1
-label-connected = %essid%
+label-connected = %essid% ↑ %upspeed% ↓ %downspeed%
 
 ;format-disconnected =
 format-disconnected = <label-disconnected>
