--- a/.SpaceVim.d/init.toml
+++ b/.SpaceVim.d/init.toml
@@ -11,8 +11,8 @@
     # set spacevim theme. by default colorscheme layer is not loaded,
     # if you want to use more colorscheme, please load the colorscheme
     # layer
-    # colorscheme = "gruvbox"
-    colorscheme = "monokai"
+    colorscheme = "gruvbox"
+    #colorscheme = "monokai"
     colorscheme_bg = "dark"
     # Disable guicolors in basic mode, many terminal do not support 24bit
     # true colors
@@ -32,14 +32,14 @@
 
 # Enable autocomplete layer
 [[layers]]
-name = 'autocomplete'
-auto-completion-return-key-behavior = "complete"
-auto-completion-tab-key-behavior = "smart"
+  name = 'autocomplete'
+  auto-completion-return-key-behavior = "complete"
+  auto-completion-tab-key-behavior = "smart"
 
 [[layers]]
-name = 'shell'
-default_position = 'top'
-default_height = 30
+  name = 'shell'
+  default_position = 'top'
+  default_height = 30
 
 [[layers]]
   name = "lang#go"
@@ -67,15 +67,3 @@ default_height = 30
 
 [[layers]]
   name = "denite"
-
-[[layers]]
-  name = "lsp"
-  filetypes = [
-    "rust",
-    "javascript",
-    "go",
-    "typescript",
-    "purescript",
-    "haskell",
-    "python"
-  ]
