--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -29,7 +29,7 @@ alert = #bd2c40
 
 [bar/skydome]
 dpi      = 140
-monitor = ${env:MONITOR:DP-2}
+monitor = ${env:MONITOR:eDP-1}
 width = 100%
 height = 27
 ;offset-x = 1%
